[Merge] Add engine_forkchoiceUpdated EE API method (#4396)
* Add engine_forkchoiceUpdated EE API method implementation
* Remove setHead/finalizeBlock methods